# eNetSTL

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  README.md  README_zh.md  build.sh  clean.sh  setup.sh  testing_instructions.md
Docker/: Dockerfile  (+2 more)
src/bpf_kern/: CMakeLists.txt  bpf_cmp_alg_simd.h  bpf_experimental.h  bpf_hash_alg_simd.h  bpf_random_base_alg.h  common.h  copy_bpf_objs.cmake  count_pkt.c  cuckoo_hash.c  cuckoo_hash_prefill.c  efd.c  empty_xdp.c  fasthash.h  heavy_keeper.c  hw_demo.c  jhash.h  kprobe_demo_kern.c  linked_list_test.c  member_htss.c  member_vbf.c  pcn_bridge_dp.c  pcn_katran_dp.c  pcn_lbdsr_dp.c  rake_limit.c  sched_cFFS_PIQ.c  sched_cFFS_PIQ_bktlist.c  sched_hpiq.h  sched_time_wheel.c  simple_ringbuf.h  sk_cm.c  sk_cm.h  sk_cm2.c  sk_common.h  sk_config.h  sk_nitro.c  skeleton.cmake  space_saving.c  test_bpf_cmp_alg_simd.c  test_bpf_fasthash32_alt.c  test_bpf_fasthash32_alt_avx2_pkt5.c  (+9 more)
src/bpf_kern/cmaps/: base_scmap_bktlist.c  cmap_demo.c  cmap_empty.c  cuckoo_hash.c  member_scmap_htss.c  member_scmap_vbf.c  sched_scmap_cFFS_PIQ.c  sched_scmap_time_wheel.c  scmap_cFFS_PIQ.c  scmap_cuckoo_hash.c  scmap_doubleSketch.c  scmap_efd.c  scmap_empty.c  scmap_empty_cb_base.c  scmap_empty_cb_ext.c  scmap_empty_cb_ext_primitive.c  scmap_empty_lookup.c  scmap_empty_update.c  scmap_sk_cm.c  scmap_skiplist.c  scmap_space_saving.c  scmap_space_saving_list.c  ss_ext_test.c  static_cmap_demo.c
src/bpf_kern/exp1-2/: enetstl_skiplist_ins_del_12.c  enetstl_skiplist_ins_del_13.c  enetstl_skiplist_ins_del_14.c  enetstl_skiplist_ins_del_15.c  enetstl_skiplist_ins_del_16.c  enetstl_skiplist_lookup_12.c  enetstl_skiplist_lookup_13.c  enetstl_skiplist_lookup_14.c  enetstl_skiplist_lookup_15.c  enetstl_skiplist_lookup_16.c  lkm_skiplist_ins_del_12.c  lkm_skiplist_ins_del_13.c  lkm_skiplist_ins_del_14.c  lkm_skiplist_ins_del_15.c  lkm_skiplist_ins_del_16.c  lkm_skiplist_lookup_12.c  lkm_skiplist_lookup_13.c  lkm_skiplist_lookup_14.c  lkm_skiplist_lookup_15.c  lkm_skiplist_lookup_16.c  nfdchs_skiplist.h  ptr_skiplist.c
src/bpf_kern/exp3/: ebpf_cuckoo_hash_10.c  ebpf_cuckoo_hash_100.c  ebpf_cuckoo_hash_25.c  ebpf_cuckoo_hash_50.c  ebpf_cuckoo_hash_75.c  enetstl_cuckoo_hash.c  lkm_cuckoo_hash.c  simple_ringbuf.h
src/bpf_kern/exp4/: ebpf_sk_nitro_10.c  ebpf_sk_nitro_2.c  ebpf_sk_nitro_4.c  ebpf_sk_nitro_6.c  ebpf_sk_nitro_8.c  enetstl_sk_nitro_10.c  enetstl_sk_nitro_2.c  enetstl_sk_nitro_4.c  enetstl_sk_nitro_6.c  enetstl_sk_nitro_8.c  lkm_sk_nitro.c  sk_common.h  sk_config.h
src/bpf_kern/exp5/: crc.h  ebpf_sk_cm_2.c  ebpf_sk_cm_4.c  ebpf_sk_cm_6.c  ebpf_sk_cm_8.c  enetstl_sk_cm_2.c  enetstl_sk_cm_4.c  enetstl_sk_cm_6.c  enetstl_sk_cm_8.c  lkm_sk_cm.c  sk_config.h
src/bpf_kern/exp6/: ebpf_carausel_tw_16.c  ebpf_carausel_tw_32.c  ebpf_carausel_tw_4.c  ebpf_carausel_tw_8.c  ebpf_tw.h  enetstl_apis.h  enetstl_carausel_tw_16.c  enetstl_carausel_tw_32.c  enetstl_carausel_tw_4.c  enetstl_carausel_tw_8.c  enetstl_tw.h  lkm_carausel_tw.c
src/bpf_kern/exp7/: ebpf_htss_100.c  ebpf_htss_25.c  ebpf_htss_50.c  ebpf_htss_75.c  enetstl_htss_100.c  enetstl_htss_50.c  lkm_htss.c
src/bpf_kern/exp8/: ebpf_cFFS_1.c  ebpf_cFFS_2.c  ebpf_cFFS_3.c  enetstl_cFFS_1.c  enetstl_cFFS_2.c  enetstl_cFFS_4.c  lkm_cFFS.c  sched_hpiq.h  simple_ringbuf.h
src/bpf_kern/exp9/: empty_base.c
src/bpf_kern/hypercom/: hash_mod_struct_ops_base.c  hash_mod_struct_ops_ext.c  htss_structop_base.c  htss_structop_ext.c  hypercom_cuckoo_hash.c  hypercom_efd.c  hypercom_heavy_keeper_ext.c  hypercom_member_htss.c  hypercom_member_vbf.c  hypercom_sk_cm2_base.c  hypercom_sk_cm2_ext.c  hypercom_sk_nitro.c  hypercom_space_saving.c  mod_st_demo_base.c  mod_st_demo_ext.c  ptr_skiplist.c  ptr_spacesaving_ext.c.black  ptr_structure_test.c  sched_hc_cFFS_PIQ.c  sched_hc_cFFS_PIQ_bktlist.c  sched_hc_time_wheel.c
src/bpf_kern/motivation-control-plane/: cuckoo_hash.h  ebpf_cuckoo_hash_dp.c  test_ebpf_cuckoo_hash_dp.c
src/bpf_kern/pcn_katran_headers/: balancer_consts.h  balancer_helpers.h  balancer_maps.h  balancer_structs.h  control_data_maps.h  csum_helpers.h  encap_helpers.h  handle_icmp.h  introspection.h  jhash.h  pckt_encap.h  pckt_parsing.h
src/bpf_kern/utils/: count_pkt.c
src/c/: CMakeLists.txt  clear_struct_ops_user.c  common.h  config.h  crc.h  cuckoo_hash_collision_user.c  cuckoo_hash_prefill_user.c  cuckoo_hash_user.c  efd_user.c  heavy_keeper_user.c  member_htss_user.c  member_vbf_user.c  pcn_bridge_dp_user.c  pcn_katran_dp_user.c  pcn_lbdsr_dp_user.c  rake_limit_user.c  sched_cffs_bktlist_user.c  sched_cffs_user.c  sched_time_wheel_user.c  sk_cm2_user.c  sk_cm_user.c  sk_nitro_user.c  space_saving_user.c  test_bpf_cmp_alg_simd_user.c  test_bpf_fasthash32_alt_avx2_pkt5_user.c  test_bpf_fasthash32_alt_user.c  test_bpf_hash_alg_simd_user.c  test_bpf_kptr_xchg_user.c  test_bpf_random_base_alg_user.c  test_crc_hash_user.c  test_hash_mod_struct_ops_user.c  test_hash_pipe_user.c  test_helpers.h  test_linked_list_user.c  test_member_htss_user.c  test_member_vbf_user.c  test_parse_pkt_5tuple_user.c  test_sched_cffs_user.c  test_time_wheel_user.c  test_tzcnt_user.c
src/c/bpf_skel/: cmap_demo.skel.h  cmap_empty.skel.h  demo_fmod_ret.skel.h  empty_xdp.skel.h  hw_demo.skel.h  kprobe_demo_kern.skel.h  link_list_demo.skel.h  linked_list_test.skel.h  sched_cFFS_PIQ.skel.h  sched_time_wheel.skel.h
src/c/cmaps/: cmap_demo_user.c  cmap_empty_user.c  cmap_member_htss_user.c  cmap_member_vbf_user.c  cuckoo_hash_user.c  sched_scmap_cffs_user.c  sched_scmap_time_wheel_user.c  scmap_cffs_user.c  scmap_cuckoo_hash_user.c  scmap_doubleSketch_user.c  scmap_efd_user.c  scmap_empty_cb_primitive_user.c  scmap_empty_cb_user.c  scmap_empty_lookup_user.c  scmap_empty_update_user.c  scmap_empty_user.c  scmap_sk_cm_user.c  scmap_sk_nitro_user.c  scmap_skiplist_user.c  scmap_space_saving_list_user.c  scmap_space_saving_user.c  test_base_scmap_bktlist_user.c  test_custom_map_user.c  test_sched_scmap_cffs_PIQ_user.c  test_sched_scmap_time_wheel_user.c  test_scmap_cffs_PIQ_user.c  test_ss_ext_user.c  test_static_cmap_user.c
(+347 files in other folders)
